# the_world_after_bot

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
the_world_after/: __main__.py  bot.py  settings.py
the_world_after/db/: db.py
the_world_after/db/migrations/: env.py
the_world_after/db/migrations/versions/: 2023-01-21__18_13_add_players.py  2023-01-22__07_18_add_states.py
the_world_after/db/models/: __init__.py  player.py  state.py
the_world_after/game/: states.py
the_world_after/migrations/: env.py
the_world_after/routers/: base.py
the_world_after/utils/: logs.py  middlewares.py  postgres_storage.py  types.py
