[tool.pdm]

[tool.pdm.scripts]
# lints
black = "black ."
isort = "isort ."
flake = "flake8 ."
lint = {composite = ["black", "isort", "flake"]}

# test
test = "pytest ."

# app
start.cmd = "python -m the_world_after"
start.env_file = ".env"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "isort>=5.11.4",
    "flake8>=6.0.0",
    "pytest[asyncio]>=7.2.1",
]
[tool.black]
line-lengh = 79

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "the_world_after_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Gofiny", email = "gofiny@inbox.ru"},
]
dependencies = [
    "aiogram==3.0.0b6",
    "pyyaml>=6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"