[project]
name = "the_world_after_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Gofiny", email = "gofiny@inbox.ru"},
]
dependencies = [
    "aiogram==3.0.0b6",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=1.4.46",
    "alembic>=1.9.2",
    "asyncpg>=0.27.0",
    "setuptools>=66.1.1",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
_.env_file = ".env"
# lints
black = "black ."
isort = "isort ."
flake = "flake8 ."
lint = {composite = ["black", "isort", "flake"]}

# test
test = "pytest ."

# app
start = "python -m the_world_after"

#database
makemigrations = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"
downgrade = "alembic downgrade"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "isort>=5.11.4",
    "flake8>=6.0.0",
    "pytest[asyncio]>=7.2.1",
]
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

